<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lander</name>
  <version>4.0.0</version>
  <description>Precision landing a drone on a Aruco marker</description>
  <maintainer email="eslaghuis@gmail.com">Eric Slaghuis</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lander_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
